--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,7 @@
 /*COLORES*/
-$fondo:#A8DADC;
-$titulos:#E63946;
-$linediv: #1D3557;
+$fondo:#457B9D;
+$fondocard: #A8DADC;
+$titulos:#F1FAEE;
+$linediv: #F1FAEE;
+$text: #1D3557;
+$comprar: #E63946;
